# backend/router/chatbots.go
@@ -10,4 +10,7 @@ import (
 
 func mountChatBotRoutes(r *mux.Router, h *handlers.ChatBotHandler) {
 	r.Handle("/chatbots/create", middleware.JWTAuth(http.HandlerFunc(h.CreateChatBot))).Methods(http.MethodPost)
+	r.Handle("/chatbots/{id}", middleware.JWTAuth(http.HandlerFunc(h.GetChatBot))).Methods(http.MethodGet)
+	r.Handle("/chatbots/{id}", middleware.JWTAuth(http.HandlerFunc(h.UpdateChatBot))).Methods(http.MethodPatch)
+	r.Handle("/chatbots/{id}", middleware.JWTAuth(http.HandlerFunc(h.DeleteChatBot))).Methods(http.MethodDelete)
 }
